<resources>
    <string name="app_name">BFconnect</string>
    <string name="title_school">Scuola</string>
    <string name="title_dashboard">Home</string>
    <string name="title_notifications">Notifiche</string>
    <string name="title_profile">Profilo</string>
    <string name="title_rate_app">Valuta l\'app</string>
    <string name="title_quit">Esci</string>
    <string name="title_bookAction">Prenota</string>
    <string name="btnStart">Entra</string>
    <string name="btnNext">Avanti</string>
    <string name="ls_Title">Text View</string>
    <string name="title_settings">Impostazioni</string>
    <string name="title_dev_mode">Opzioni Sviluppatore</string>
    <string name="scan_qr_code">LEGGI QR CODE</string>
    <string name="scan_a_code">Leggi un QR Code per ricevere info sui laboratori</string>
    <string name="result_not_found">Id non trovato</string>
    <string name="network_lost">Internet Disconesso</string>
    <string name="network_regained">Internet Connesso</string>
    <string name="iis_bf">Laboratori</string>
    <string name="activity_bf">Attività Belluzzi-Fioravanti</string>
    <string name="address_b">Indirizzi Belluzzi</string>
    <string name="project_b">Progetti Belluzzi</string>
    <string name="address_f">Indirizzi Fioravanti e Serale</string>
    <string name="project_f">Progetti Fioravanti</string>
    <string name="message_write_error">Errore durante la scrittura dell\'ID Code</string>
    <string name="message_write_success">Scritto correttamente sul Tag!</string>
    <string name="message_write_progress">Scrittura sul TAG..</string>
    <string name="message_tag_detected">NFC Tag Rilevato !</string>
    <string name="message_write_tag">Scrittura nel TAG</string>
    <string name="message_tap_tag">Avvicina il tag NFC sul tuo dispositivo!</string>
    <string name="hint_message">ID Code</string>
    <string name="label_insert_PIN">Inserisci il PIN</string>
    <string name="message">Opzioni Sviluppatore</string>
    <string name="pin">41901</string>
    <string name="confirm">Conferma</string>
    <string name="nfc_off">NFC Disattivo</string>
    <string name="nfc_on">NFC Attivo</string>
    <string name="nfc_nv">NFC Assente</string>
    <string name="camera_av">Camera Presente</string>
    <string name="camera_na">Camera Assente</string>
    <string name="perito_info">Perito Informatico</string>
    <string name="perito_chimico">Perito&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Chimico</string>
    <string name="perito_mecca">Perito Meccanico</string>
    <string name="perito_ele">Perito Elettronico</string>
    <string name="belluzzi">Belluzzi</string>
    <string name="address_info">Informatica</string>
    <string name="address_chimica">Chimica</string>
    <string name="address_mecca">Meccanica</string>
    <string name="address_ele">Elettronica</string>
    <string name="shortcut_disabled_message">Error</string>
    <string name="shortcut_nfc_l">Leggi NFC</string>
    <string name="shortcut_nfc_s">Leggi NFC</string>
    <string name="shortcut_qr_l">Leggi QRcode</string>
    <string name="shortcut_qr_s">Leggi QRcode</string>
    <string name="shortcut_pr_l">Prenota Open Day</string>
    <string name="shortcut_pr_s">Prenota Open Day</string>
    <string name="toastPrenota">Pagina non disponibile</string>
    <string name="url_bfsite">http://www.iisbelluzzifioravanti.gov.it/</string>
    <string name="url_asl">http://www.iisbelluzzifioravanti.gov.it/alternanza-scuola-lavoro/</string>
    <string name="url_smd">http://www.iisbelluzzifioravanti.gov.it/school-maker-day/</string>
    <string name="url_erasmus">http://www.iisbelluzzifioravanti.gov.it/erasus-plus/</string>
    <string name="url_el">http://www.iisbelluzzifioravanti.gov.it/educazione-legalita/</string>
    <string name="url_cisco">http://www.iisbelluzzifioravanti.gov.it/cisco-academy/</string>
    <string name="fioravanti">Fioravanti</string>
    <string name="image">Image</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="image3">image3</string>
    <string name="des_bot_add">Nel sistema scolastico, il corso di Perito tecnico industriale dell\'Istruzione Tecnica si articola in un biennio comune e un successivo triennio di specializzazione.</string>
    <string name="per_chi">Perito Chimico</string>
    <string name="name_adr_title_info">Indirizzo Informatico</string>
    <string name="name_adr_title_chimica">Indirizzo Chimico</string>
    <string name="name_adr_title_meccanica">Indirizzo Meccanico</string>
    <string name="name_adr_title_ele">Indirizzo Elettronico</string>
    <string name="name_adr_title_manu">Indirizzo di Manutenzione e Assistenza Tecnica</string>
    <string name="name_adr_title_meca">Indirizzo di Apparati, impianti e servizi tecnici industriali e civili</string>
    <string name="name_adr_title_elet">Indirizzo di Qualifiche Regionali</string>
    <string name="title_comp">Competenze</string>
    <string name="des_adr_info1">Il Diplomato in Informatica ha competenze specifiche nel campo dei sistemi informatici, dell’elaborazione, dell’informazione, delle applicazioni e tecnologie Web, delle reti e degli apparati di comunicazione</string>
    <string name="des_adr_info2">Il Diplomato in Informatica ha competenze specifiche nel campo dei sistemi informatici, dell’elaborazione, dell’informazione, delle applicazioni e tecnologie Web, delle reti e degli apparati di comunicazione inoltre ha competenze e conoscenze che, a seconda delle diverse articolazioni, si rivolgono all’analisi, progettazione, installazione e gestione di sistemi informatici, basi di dati, reti di sistemi
di elaborazione, sistemi multimediali e apparati di trasmissione e ricezione dei segnali; collabora nella gestione di progetti, operando nel quadro di normative nazionali e internazionali,
concernenti la sicurezza in tutte le sue accezioni e la protezione delle informazioni (“privacy”).</string>
    <string name="des_adr_chi1">Il Diplomato in Chimica ha competenze nel settore della prevenzione e della gestione di situazioni a rischio ambientale e sanitario</string>
    <string name="des_adr_chi2">Il Diplomato in Chimica ha competenze nel settore della prevenzione e della gestione di situazioni a rischio ambientale e sanitario inoltre ha competenze specifiche nel campo dei materiali, delle analisi strumentali chimico-biologiche, nei processi di produzione, in relazione alle esigenze delle realtà territoriali, negli ambiti
chimico, merceologico, biologico, farmaceutico, tintorio e conciario</string>
    <string name="des_adr_mecc1">Il Diplomato in Meccanica ha competenze specifiche nel campo dei materiali, nella loro scelta, nei loro trattamenti e lavorazioni; inoltre, ha competenze sulle macchine e sui dispositivi utilizzati nelle industrie</string>
    <string name="des_adr_mecc2">Il Diplomato in Meccanica ha competenze specifiche nel campo dei materiali, nella loro scelta, nei loro trattamenti e lavorazioni; inoltre, ha competenze sulle macchine e sui dispositivi utilizzati nelle industrie e inoltre nelle attività produttive d’interesse, egli collabora nella progettazione, costruzione e collaudo dei dispositivi e dei prodotti, nella realizzazione dei relativi processi produttivi; interviene
nella manutenzione ordinaria e nell’esercizio di sistemi meccanici ed elettromeccanici complessi; è in grado di dimensionare, installare e gestire semplici impianti industriali.</string>
    <string name="des_adr_ele1">Il Diplomato in Elettronica ha competenze specifiche nel campo dei sistemi elettrici, elettronici e delle macchine elettriche, della generazione, elaborazione e trasmissione dei segnali elettrici ed elettronici</string>
    <string name="des_adr_ele2">Il Diplomato in Elettronica ha competenze specifiche nel campo dei materiali e delle tecnologie costruttive dei sistemi elettrici, elettronici e delle macchine elettriche, della generazione, elaborazione e
trasmissione dei segnali elettrici ed elettronici, dei sistemi per la generazione, conversione e trasporto dell’energia elettrica e dei relativi impianti di distribuzione e nei contesti produttivi d’interesse, collabora nella progettazione, costruzione e collaudo di sistemi elettrici ed elettronici, di impianti elettrici e sistemi di automazione.</string>
    <string name="des_manu1">
        Il Diplomato in “Manutenzione ed assistenza tecnica”:
        ha le competenze per gestire, organizzare ed effettuare interventi di installazione e manutenzione ordinaria, di diagnostica, riparazione e collaudo
        relativamente a piccoli sistemi, impianti e apparati tecnici, anche marittimi;
    </string>
    <string name="des_manu2">
        Il Diplomato in “Manutenzione ed assistenza tecnica”:
ha le competenze per gestire, organizzare ed effettuare interventi di installazione e manutenzione ordinaria, di diagnostica, riparazione e collaudo
relativamente a piccoli sistemi, impianti e apparati tecnici, anche marittimi;
le sue competenze tecnico-professionali sono riferite alle filiere dei settori produttivi generali (elettronica, elettrotecnica, meccanica, termotecnica ed altri) e
specificamente sviluppate in relazione alle esigenze espresse dal territorio.
    </string>
    <string name="des_meca1">
        Sono attivate classi inerenti l’indirizzo di:
Manutenzione ed assistenza tecnica
In virtù delle opzioni consentite a livello nazionale, le classi terze, quarte e quinte fruiscono dei corsi (opzioni) di:
Manutenzione mezzi di trasporto
Apparati, impianti e servizi tecnici industriali e civili
    </string>
    <string name="des_meca2">
        Sono attivate classi inerenti l’indirizzo di:
Manutenzione ed assistenza tecnica
In virtù delle opzioni consentite a livello nazionale, le classi terze, quarte e quinte fruiscono dei corsi (opzioni) di:
Manutenzione mezzi di trasporto
Apparati, impianti e servizi tecnici industriali e civili
Ai sensi della legge regionale n. 15/2011, che ha istituito nella Regione Emilia-Romagna il sistema di istruzione e formazione professionale (IeFP), al termine del terzo
anno gli studenti potranno conseguire i seguenti diplomi di qualifica: Operatore
sistemi elettrico-elettronico, Operatore meccanico, Operatore degli impianti termo-idraulici, Operatore meccatronico dell’autoriparazione
    </string>
    <string name="des_elet1">L’opzione “Apparati, impianti e servizi tecnici industriali e civili” specializza e integra le conoscenze e competenze in uscita all’indirizzo, coerente con la filiera
produttiva di riferimento e con le esigenze del territorio</string>
    <string name="des_elet2">L’opzione “Apparati, impianti e servizi tecnici industriali e civili” specializza e integra le conoscenze e competenze in uscita all’indirizzo, coerente con la filiera
produttiva di riferimento e con le esigenze del territorio, con competenze rispondenti ai fabbisogni delle aziende impegnate nella manutenzione di apparati e impianti
elettrici, elettromeccanici termici, industriali e civili, e relativi servizi tecnici.</string>
    <string name="title_des">Descrizione</string>
    <string name="project_desi">Progetto Desi</string>
    <string name="project_mast">Progetto MAST.</string>
    <string name="project_carp">Progetto Carpigiani</string>
    <string name="project_filo">Progetto Filosofia</string>
    <string name="project_opus">Progetto Opus Facere</string>
    <string name="project_texa">Progetto Texa Edu</string>
    <string name="project_stem">Progetto Stem</string>
    <string name="project_toyota">Progetto Toyota</string>
    <string name="project_magneti">Progetto Magneti Marelli</string>
    <string name="des_desi1">Il Progetto DESI III è un percorso formativo duale, un programma congiunto di attività didattica in aula e di formazione in azienda, caratterizzato dal rafforzamento dell’alternanza scuola-lavoro</string>
</resources>